--- a/app/global.css
+++ b/app/global.css
@@ -6,15 +6,14 @@
 }
 
 :root {
-  --sh-class: #2d5e9d;
-  --sh-identifier: #354150;
-  --sh-sign: #8996a3;
-  --sh-string: #007f7a;
-  --sh-keyword: #e02518;
-  --sh-comment: #a19595;
-  --sh-jsxliterals: #6266d1;
-  --sh-property: #e25a1c;
-  --sh-entity: #e25a1c;
+  --sh-class: #4c97f8; /* Dark mode class color */
+  --sh-identifier: white; /* Dark mode identifier color */
+  --sh-sign: #f47067; /* Dark mode keyword color */
+  --sh-string: #0fa295; /* Dark mode string color */
+  --sh-comment: #a19595; /* Dark mode comment color */
+  --sh-jsxliterals: #6266d1; /* Dark mode jsxliterals color */
+  --sh-property: #e25a1c; /* Dark mode property color */
+  --sh-entity: #e25a1c; /* Dark mode entity color */
 }
 
 @media (prefers-color-scheme: dark) {
